Misc project cleanup (minor code tweaks, spelling corrections)